--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript",
     "process-injection"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0",
   "main": "dist/index.js",
   "name": "@experiments/demo",
   "scripts": {
